Transform registration to wizard flow and clean up intro displays
MAJOR UX IMPROVEMENTS - USER FEEDBACK IMPLEMENTED:

================================================================================
1. MULTI-STEP WIZARD REGISTRATION (reg.html - COMPLETE REWRITE)
================================================================================

BEFORE: Intimidating long form with all fields at once
AFTER: Beautiful 5-step wizard asking one question at a time

WIZARD STEPS:
1. About You
   - Name only (simple start)

2. Your Business
   - Organization name
   - Your role

3. Where Based
   - Industry
   - City

4. What Drives Your Business
   - Revenue model
   - Biggest challenge

5. What You Offer & Need
   - Assets/strengths (free-form)
   - What help you need (free-form)
   - Fun fact
   - Email (optional)
   - Consent checkbox

FEATURES:
✅ Progress indicator with 5 steps (circles turn green when completed)
✅ One question per screen - less intimidating
✅ Auto-focus on first input of each step
✅ Next/Back buttons with smooth transitions
✅ Real-time validation (Next button disabled until valid)
✅ Enter key advances (except in textareas)
✅ Animated transitions (fadeIn 0.3s)
✅ Clean, modern design with large inputs

================================================================================
2. SMART FREE-FORM TEXT PARSING (reg.html:318-329)
================================================================================

BEFORE: Required "comma-separated" entries - rigid format
AFTER: Accepts ANY natural format and parses intelligently

USER CAN ENTER:
- Comma separated: "marketing, sales, partnerships"
- Line breaks: "marketing\nsales\npartnerships"
- Bullet points: "• marketing\n• sales\n• partnerships"
- Dashes: "- marketing\n- sales\n- partnerships"
- Mixed formats

PARSING LOGIC:
1. Replace line breaks with commas
2. Remove bullet point characters (•, -, *)
3. Remove multiple consecutive commas
4. Trim and return clean comma-separated list

HINTS SHOWN TO USE

--- a/public/matches.html
+++ b/public/matches.html
@@ -55,9 +55,8 @@
         <div id="introModal" class="modal hidden">
             <div class="modal-content">
                 <span class="close" id="closeModal">&times;</span>
-                <h3>Introduction Starter</h3>
                 <div id="modalContent"></div>
-                <button class="btn btn-primary" id="markAcknowledged">Mark as Introduced</button>
+                <button class="btn btn-primary" id="markAcknowledged" style="margin-top: 2rem;">✓ Mark as Introduced</button>
             </div>
         </div>
     </div>
@@ -164,19 +163,19 @@
                     <div class="match-rationale">
                         ${match.rationale_ops ? `
                             <div class="rationale-item">
-                                <strong>Ops Rationale:</strong>
+                                <strong>Why Connect:</strong>
                                 <p>${match.rationale_ops}</p>
                             </div>
                         ` : ''}
                         ${match.creative_angle ? `
                             <div class="rationale-item">
-                                <strong>Creative Angle:</strong>
+                                <strong>Unique Opportunity:</strong>
                                 <p>${match.creative_angle}</p>
                             </div>
                         ` : ''}
                     </div>
                     <button class="btn btn-small intro-btn" data-intro-id="${match.intro_id}">
-                        View Introduction Starter
+                        View Conversation Starters →
                     </button>
                 </div>
             `;
@@ -210,17 +209,62 @@
         function showIntro(introId, introBasis) {
             currentIntroId = introId;
 
-            // Handle if introBasis is an object or string
-            let displayText = introBasis;
-            if (typeof introBasis === 'object') {
-                // If it's an object, stringify it nicely or extract text
-                displayText = JSON.stringify(introBasis, null, 2);
+            // Parse and format the intro content
+            let formattedHTML = '';
+
+            try {
+                // introBasis contains numbered conversation approaches
+                // Clean up any JSON-like formatting
+                let cleanText = introBasis;
+
+                if (typeof introBasis === 'object') {
+                    cleanText = JSON.stringify(introBasis, null, 2);
+                }
+
+                // Remove JSON-like key/value formatting
+                cleanText = cleanText.replace(/"(\w+)":\s*/g, ''); // Remove "key":
+                cleanText = cleanText.replace(/[\{\}]/g, ''); // Remove braces
+                cleanText = cleanText.replace(/^,/gm, ''); // Remove leading commas
+
+                // Split by numbered approaches (Approach #1, Approach #2, Approach #3)
+                const approaches = cleanText.split(/(Approach #\d+:)/);
+
+                // Build formatted HTML
+                let approachNumber = 0;
+                formattedHTML = '<div class="intro-content">';
+                formattedHTML += '<h4 style="margin-bottom: 1rem; color: #667eea;">💡 Conversation Starters</h4>';
+
+                for (let i = 0; i < approaches.length; i++) {
+                    const part = approaches[i].trim();
+                    if (!part) continue;
+
+                    if (part.match(/Approach #\d+:/)) {
+                        approachNumber++;
+                        formattedHTML += `<div class="approach-item" style="margin-bottom: 1.5rem;">`;
+                        formattedHTML += `<div class="approach-number" style="background: #667eea; color: white; width: 30px; height: 30px; border-radius: 50%; display: inline-flex; align-items: center; justify-content: center; font-weight: 700; margin-bottom: 0.5rem;">${approachNumber}</div>`;
+                    } else {
+                        // Clean up the approach text
+                        let cleanedApproach = part
+                            .replace(/^\s*"/, '') // Remove leading quote
+                            .replace(/"\s*$/, '') // Remove trailing quote
+                            .replace(/\\"/g, '"') // Unescape quotes
+                            .replace(/\n\n+/g, '\n') // Remove extra newlines
+                            .trim();
+
+                        formattedHTML += `<p style="line-height: 1.6; color: #333; margin-left: 0.5rem;">${cleanedApproach}</p>`;
+                        formattedHTML += `</div>`;
+                    }
+                }
+
+                formattedHTML += '</div>';
+
+            } catch (error) {
+                console.error('Error formatting intro:', error);
+                // Fallback to simple display
+                formattedHTML = `<div style="white-space: pre-wrap; line-height: 1.6;">${introBasis}</div>`;
             }
 
-            // Replace newlines with <br> for better formatting
-            displayText = displayText.replace(/\n/g, '<br>');
-
-            document.getElementById('modalContent').innerHTML = `<div style="white-space: pre-wrap;">${displayText}</div>`;
+            document.getElementById('modalContent').innerHTML = formattedHTML;
             document.getElementById('introModal').classList.remove('hidden');
         }
         
