Add expandable creative collaboration ideas UI and fix AI dictionary response parsing
ISSUE #1: Score breakdown showed 'AI-researched creative collaboration opportunities (5 ideas generated)' but didn't display what the ideas actually were - just the count.

ISSUE #2: AI sometimes returned dictionary format like {'1': 'idea text', '2': 'idea text'} instead of clean arrays, causing display issues with key-value pairs showing.

💡 EXPANDABLE IDEAS BUTTON (UI Enhancement): Added button in Complementary Value score section: '💡 View 5 Creative Collaboration Ideas →'. Button toggles to '💡 Hide 5 Creative Collaboration Ideas ▼' when clicked. Smooth slideDown animation when expanding (0.3s ease). Clean, numbered display with gradient background and left border accent.

🎨 STYLING (styles.css): .btn-toggle-ideas: Purple gradient button (matches app theme), full-width, hover lift effect. .creative-ideas-list: Gradient background (#f8f9ff → #f0f4ff), left border accent, animated slide-down. .idea-item: Flexbox layout with numbered badge (purple circle) and idea text. Mobile responsive: Adjusted padding and font sizes for small screens.

🧹 AI RESPONSE CLEANUP (server.js): Added cleanArrayField() function in researchComplementaryValue(). Detects dictionary-style responses: {'1': 'text', '2': 'text'} → ['text', 'text']. Handles edge cases: strings, objects, empty values. Applied to: creative_collaboration_ideas, top_3_opportunities. Frontend also strips dictionary keys: Replace /^["']?\d+["']?\s*:\s*/ pattern, removes quotes.

📊 USER EXPERIENCE IMPROVEMENTS: Before: 'AI-researched creative collaboration opportunities (5 ideas generated)'. After: Same description + expandable button showing: '1. Co-create joint service offering combining technical expertise with marketing reach', '2. Cross-referral partnership targeting enterprise clients in finance sector', etc. Clean, scannable numbered list with visual hierarchy.

TECHNICAL DETAILS: Toggle function prevents event propagation (doe

--- a/public/matches.html
+++ b/public/matches.html
@@ -123,8 +123,15 @@
                                     ${summary ? `<span class="grade-badge grade-${summary.grade.replace('+', 'plus')}">${summary.grade}</span>` : ''}
                                 </div>
                                 <div class="breakdown-details">
-                                    ${breakdown.map(item => {
+                                    ${breakdown.map((item, idx) => {
                                         const percentage = item.maxPoints > 0 ? (item.points / item.maxPoints) * 100 : 0;
+
+                                        // Check if this is the Complementary Value category with creative ideas
+                                        const isComplementaryValue = item.factor === 'Complementary Value Exchange';
+                                        const hasCreativeIdeas = isComplementaryValue && scoreData.complementaryValueResearch?.creative_collaboration_ideas;
+                                        const creativeIdeas = hasCreativeIdeas ? scoreData.complementaryValueResearch.creative_collaboration_ideas : [];
+                                        const ideasCount = Array.isArray(creativeIdeas) ? creativeIdeas.length : 0;
+
                                         return `
                                         <div class="breakdown-item">
                                             <div class="breakdown-header">
@@ -135,6 +142,23 @@
                                                 <div class="progress-fill" style="width: ${percentage}%"></div>
                                             </div>
                                             ${item.description ? `<div class="factor-description">${item.description}</div>` : ''}
+                                            ${hasCreativeIdeas && ideasCount > 0 ? `
+                                                <button class="btn-toggle-ideas" onclick="toggleCreativeIdeas(event, ${idx})">
+                                                    💡 View ${ideasCount} Creative Collaboration Idea${ideasCount > 1 ? 's' : ''} →
+                                                </button>
+                                                <div class="creative-ideas-list" id="ideas-${idx}" style="display: none;">
+                                                    ${creativeIdeas.map((idea, i) => {
+                                                        // Clean up the idea text (remove dictionary keys like "1:", "2:", etc)
+                                                        const cleanIdea = typeof idea === 'string'
+                                                            ? idea.replace(/^["']?\d+["']?\s*:\s*/, '').replace(/^["']|["']$/g, '').trim()
+                                                            : JSON.stringify(idea);
+                                                        return `<div class="idea-item">
+                                                            <span class="idea-number">${i + 1}</span>
+                                                            <span class="idea-text">${cleanIdea}</span>
+                                                        </div>`;
+                                                    }).join('')}
+                                                </div>
+                                            ` : ''}
                                         </div>
                                         `;
                                     }).join('')}
@@ -433,6 +457,23 @@
         // Initial load
         loadDashboard();
         
+        // Toggle creative collaboration ideas display
+        function toggleCreativeIdeas(event, idx) {
+            event.preventDefault();
+            event.stopPropagation();
+
+            const button = event.target;
+            const ideasList = button.nextElementSibling;
+
+            if (ideasList.style.display === 'none') {
+                ideasList.style.display = 'block';
+                button.textContent = button.textContent.replace('View', 'Hide').replace('→', '▼');
+            } else {
+                ideasList.style.display = 'none';
+                button.textContent = button.textContent.replace('Hide', 'View').replace('▼', '→');
+            }
+        }
+
         // Auto-refresh every 30 seconds
         setInterval(loadDashboard, 30000);
     </script>
